<!-- Homework 1
activity_main.java
Raghuveer Sampath Krishnamurthy, John OConnor -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstline_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/weighttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/weight_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/weight_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_display"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gender_label" />

            <Switch
                android:id="@+id/switchid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MF_id"
                android:gravity="center"
                android:text="@string/MFlable" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstline_id"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/savebutton_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclicksave"
            android:text="@string/textlabel" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/thirdline_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_id"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinklable"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radiogrp_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <RadioButton
                android:id="@+id/oz1id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneozlable"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/oz2id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveozlable"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/oz3id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelveozlable"
                android:textSize="20dp" />

        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fourthline_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdline_id"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/alcoholPctText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/alcohollable" />

        <SeekBar
            android:id="@+id/alcoholSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/alcoholPct"
            android:layout_toRightOf="@+id/alcoholPctText" />

        <TextView
            android:id="@+id/alcoholPct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:textSize="15dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fifthline_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourthline_id"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addrink_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onclickaddDrink"
            android:text="@string/adddrinklable" />

        <Button
            android:id="@+id/reset_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnclickReset"
            android:text="@string/resetlable" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bacindicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fifthline_id"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bacvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/baclable"
            android:textSize="30dp" />

        <ProgressBar
            android:id="@+id/progress_id"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bacindicator"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statuslable"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/md_green_600"
            android:text="@string/labledisplay"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            />
    </LinearLayout>

</RelativeLayout>
